Configured Tailwind css
Made adjustments to the vite.config.js, the required css file, and the jsx file to test  style

--- a/Instagram Clone - React + Tailwind/index.html
+++ b/Instagram Clone - React + Tailwind/index.html
@@ -15,3 +15,11 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!--
+  To use tailwind css:
+
+  1. npm install tailwindcss @tailwindcss/vite
+  2. Add the @tailwindcss/vite plugin to your Vite configuration. (go to vite.config.js > import > add inside the plugins)
+  3. Add an @import to your CSS file that imports Tailwind CSS.
+-->
